fix table wrapping

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -19,7 +19,7 @@ table {
 .ability {
   .ability-name {
     display: inline-block;
-    max-width: 350px;
+    max-width: 300px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
